Adding Static folder with css and js files

--- a/FlaskFrontEnd/templates/app/frontend/Home.html
+++ b/FlaskFrontEnd/templates/app/frontend/Home.html
@@ -2,7 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<meta charset="UTF-8">
+
+<h1>Python number predicter</h1>
 <p>My first paragraph.</p>
 
 </body>
