Adding to  index.html and js files

--- a/FlaskFrontEnd/templates/app/frontend/Home.html
+++ b/FlaskFrontEnd/templates/app/frontend/Home.html
@@ -1,11 +1,58 @@
-<!DOCTYPE html>
-<html>
-<body>
+<!doctype html>
 
-<meta charset="UTF-8">
+<!-- Adapted from: https://getbootstrap.com/docs/4.3/getting-started/introduction/ -->
+<!-- Adapted from: https://github.com/ianmcloughlin/random-web-app/blob/master/static/index.html-->
 
-<h1>Python number predicter</h1>
-<p>My first paragraph.</p>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-</body>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>MNIST Number Guesser</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h1>Hand Written Digit Guesser</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <h5>Hints and Tips</h5>
+          <ul>
+              <li>Draw your image in the centre of the canvas. This will give more accurate results</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <form>
+            <div>
+                <canvas id="numberCanvas" style="border: 1px black" height="100" width="70">
+                    Something Went Wrong! Reload the page
+                </canvas>
+            </div>
+            <div class="form-group">
+              <button type="submit" id="submitButton" class="btn btn-primary">Generate</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- Change default jQuery slim to jQuery full. -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Script to generate random numbers in the form. -->
+    <script src="../../../static/JavaScript.js"></script>
+  </body>
 </html>
