--- a/FlaskFrontEnd/templates/app/frontend/Home.html
+++ b/FlaskFrontEnd/templates/app/frontend/Home.html
@@ -23,8 +23,8 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h5>Hints and Tips</h5>
-          <ul>
+            <h5>Hints and Tips</h5>
+            <ul>
               <li>Draw your image in the centre of the canvas. This will give more accurate results</li>
           </ul>
         </div>
@@ -33,12 +33,13 @@
         <div class="col-md-6">
           <form>
             <div>
-                <canvas id="numberCanvas" style="border: 1px black" height="100" width="70">
+                <canvas id="canvas" style="border: 1px solid black" height="200" width="150">
                     Something Went Wrong! Reload the page
                 </canvas>
             </div>
             <div class="form-group">
-              <button type="submit" id="submitButton" class="btn btn-primary">Generate</button>
+              <button type="submit" id="submitButton" class="btn btn-primary">Submit</button>
+              <button type = "Clear" id= "clearButton" class= "btn btn-primary">Clear the canvas</button>
             </div>
           </form>
         </div>
@@ -52,7 +53,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <!-- Script to generate random numbers in the form. -->
-    <script src="../../../static/JavaScript.js"></script>
+    <script  type="text/javascript" src="../../../static/Javascript.js"></script>
   </body>
 </html>
