Fixed issue with flask server in jupyter lab, Added to model.py to create model.json for use on webapp

--- a/FlaskFrontEnd/templates/app/frontend/Home.html
+++ b/FlaskFrontEnd/templates/app/frontend/Home.html
@@ -15,44 +15,49 @@
     <title>MNIST Number Guesser</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h1>Hand Written Digit Guesser</h1>
+    <div class="content">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h1>Hand Written Digit Guesser</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+              <h5>Hints and Tips</h5>
+              <ul>
+                <li>Draw your image in the centre of the canvas. This will give more accurate results</li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <form>
+              <div>
+                  <canvas id="canvas" style="border: 1px solid black" height="200" width="150">
+                      Something Went Wrong! Reload the page
+                  </canvas>
+              </div>
+              <div class="form-group">
+                <button type="submit" id="submitButton" class="btn btn-primary">Submit</button>
+                <button type = "Clear" id= "clearButton" class= "btn btn-primary">Clear the canvas</button>
+              </div>
+              <div>
+                <label for="predicted" id="predicted">Prediction: </label>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-            <h5>Hints and Tips</h5>
-            <ul>
-              <li>Draw your image in the centre of the canvas. This will give more accurate results</li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <form>
-            <div>
-                <canvas id="canvas" style="border: 1px solid black" height="200" width="150">
-                    Something Went Wrong! Reload the page
-                </canvas>
-            </div>
-            <div class="form-group">
-              <button type="submit" id="submitButton" class="btn btn-primary">Submit</button>
-              <button type = "Clear" id= "clearButton" class= "btn btn-primary">Clear the canvas</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-    
+      
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- Change default jQuery slim to jQuery full. -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script  type="text/javascript" src="../../../static/Javascript.js"></script>
+      <!-- Optional JavaScript -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <!-- Change default jQuery slim to jQuery full. -->
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <script  type="text/javascript" src="../../../static/Javascript.js"></script>
+    </div>
   </body>
 </html>
