Starting write up and adding notebook folder

--- a/FlaskFrontEnd/templates/app/frontend/Home.html
+++ b/FlaskFrontEnd/templates/app/frontend/Home.html
@@ -43,7 +43,7 @@
                 <button type = "Clear" id= "clearButton" class= "btn btn-primary">Clear the canvas</button>
               </div>
               <div>
-                <label for="predicted" id="predicted">Prediction: </label>
+                <label for="prediction" id="prediction">Prediction:</label>
               </div>
             </form>
           </div>
